[tool.poetry]
name = "repl_python3_Boom"
version = "0.1.0"
description = ""
authors = ["IamEinstein <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.11.4"
python-dotenv = "^0.18.0"
discord = "^1.7.3"
flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
